# weather_app

./: Cargo.toml
src/: main.rs  models.rs  openweather.rs
