[package]
name = "weather_app"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203",features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
eframe = "0.27.2"
egui = "0.27.2"
env_logger = { version = "0.11.3", features = ["auto-color", "humantime"] }